# create_unity_package

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  setup.cfg
src/create_unity_package/: __init__.py  __main__.py  create_unity_package.py
src/create_unity_package/templates/: gitignore.txt  license.mit.md  package_documentation.md  readme.template.md
