[metadata]
name = create_unity_package
version = 1.0.2
author = Shi Johnson-Bey
author_email = shijbey@gmail.com
description = CLI tool for generating the boilerplate Unity package structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShiJbey/create_unity_package
project_urls =
    Bug Tracker = https://github.com/ShiJbey/create_unity_package/issues
license = MIT
keywords = unity 3d, unity, automation, cli
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8
install_requires =
    inquirer
    jinja2

[options.packages.find]
where = src

[options.package_data]
* = templates/*