[metadata]
name = create_unity_package
version = 1.0.3
author = Shi Johnson-Bey
author_email = shijbey@gmail.com
description = CLI tool for generating boilerplate Unity packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShiJbey/create_unity_package
project_urls =
    Bug Tracker = https://github.com/ShiJbey/create_unity_package/issues
license = MIT
keywords = unity 3d, unity, automation, cli
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Games/Entertainment
    Typing :: Typed
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8
install_requires =
    inquirer
    jinja2

[options.packages.find]
where = src

[options.package_data]
* = templates/*

[options.entry_points]
console_scripts = 
    create-unity-package = create_unity_package.__main__:main